freebsd-buildutils (9.0-3) UNRELEASED; urgency=low

  * Replace 10_non_kfreebsd.diff with equivalent patch from upstream
    HEAD.
  * Add __BEGIN_DECLS / __END_DECLS in local unistd.h.
  * Fix local endian.h to use native <sys/endian.h> on GNU/kFreeBSD.
  * Add local sys/errno.h.

 -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 22:17:24 +0100

freebsd-buildutils (9.0-2) unstable; urgency=low

  * Add elf_common.h to local includes to fix FTBFS on GNU/Linux.
  * Install headers in freebsd hierrachy.

 -- Robert Millan <rmh@debian.org>  Sun, 08 Jan 2012 00:45:11 +0100

freebsd-buildutils (9.0-1) unstable; urgency=low

  * New upstream release.

 -- Robert Millan <rmh@debian.org>  Sat, 07 Jan 2012 20:34:01 +0100

freebsd-buildutils (8.2-8) unstable; urgency=low

  [ Matthias Klose ]
  * Fix FTBFS with ld --as-needed.  (Closes: #642091, LP: #749170)

  [ Robert Millan ]
  * Export CFLAGS in debian/rules so that it is actually propagated.
    (Closes: #642700)
  * Fix bsd.dep.mk so that -U flags are propagated in kernel builds.

 -- Robert Millan <rmh@debian.org>  Thu, 03 Nov 2011 15:02:07 +0100

freebsd-buildutils (8.2-7) unstable; urgency=low

  * 04_lex_disable_unused.diff: Fix generation of code in lex, which
    defined __unused and broke system headers (see #522773 and #522774).

 -- Robert Millan <rmh@debian.org>  Tue, 12 Jul 2011 17:53:12 +0200

freebsd-buildutils (8.2-6) unstable; urgency=low

  * 21_endian.diff: If neither TARGET_BIG_ENDIAN or TARGET_LITTLE_ENDIAN are
    defined, default to native compilation (fixes FTBFS on mips and armeb).

 -- Robert Millan <rmh@debian.org>  Wed, 06 Jul 2011 19:48:48 +0200

freebsd-buildutils (8.2-5) unstable; urgency=low

  * Disable libbsd overlay untill #630907 is fixed.  (Closes: #632600)

 -- Robert Millan <rmh@debian.org>  Mon, 04 Jul 2011 15:43:02 +0200

freebsd-buildutils (8.2-4) unstable; urgency=low

  * MACHINE_ARCH is now set to "mips" on mipsel.  (Closes: #631890)
