@@ -5,8 +5,9 @@ freebsd-buildutils (9.0-3) UNRELEASED; urgency=low
   * Add __BEGIN_DECLS / __END_DECLS in local unistd.h.
   * Fix local endian.h to use native <sys/endian.h> on GNU/kFreeBSD.
   * Add local sys/errno.h.
+  * Add a few more definitions to local sys/cdefs.h.
 
- -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 22:17:24 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 22:43:54 +0100
 
 freebsd-buildutils (9.0-2) unstable; urgency=low
 
